--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## nodenv で node リスト最新化",
   "main": "index.js",
   "scripts": {
-    "8443": "PORT=8443 PUB=on PRI=on ts-node src/index.ts",
+    "8443": "PORT=8443 PUB=pub PRI=pri ts-node src/index.ts",
     "start": "sudo ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,12 +22,14 @@
   "devDependencies": {
     "@types/koa": "^2.13.1",
     "@types/koa-static": "^4.0.1",
+    "@types/koa__router": "^8.0.4",
     "@types/node": "^14.14.34",
     "@types/uuid": "^8.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "http2": "^3.3.7",
     "koa": "^2.13.1",
     "koa-static": "^5.0.0",
