--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "http2": "^3.3.7",
     "koa": "^2.13.1",
     "koa-static": "^5.0.0",
+    "koa-views": "^7.0.0",
     "log4js": "^6.3.0",
+    "pug": "^3.0.2",
     "uuid": "^8.3.2"
   }
 }
