--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## nodenv で node リスト最新化",
   "main": "index.js",
   "scripts": {
-    "8443": "PORT=8443 PUB=pub PRI=pri ts-node src/index.ts",
+    "8443": "webpack && PORT=8443 PUB=pub PRI=pri ts-node src/index.ts",
     "start": "sudo ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +26,9 @@
     "@types/node": "^14.14.34",
     "@types/uuid": "^8.3.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "webpack": "^5.25.0",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
