--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/koa__router": "^8.0.4",
     "@types/node": "^14.14.34",
     "@types/uuid": "^8.3.0",
+    "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "webpack": "^5.25.0",
