--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "@types/koa__router": "^8.0.4",
     "@types/node": "^14.14.34",
     "@types/uuid": "^8.3.0",
+    "autoprefixer": "^10.2.5",
     "css-loader": "^5.1.2",
+    "mini-css-extract-plugin": "^1.3.9",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^5.2.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
