--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "log4js": "^6.3.0",
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
+    "skyway-js": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
